gccida/g0/dwarf2out_begin_prologue
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dwarf2out_begin_prologue/src/dwarf2out.c:2529:43: error: use of undeclared identifier 'off_76E313'
sprintf( label, "*.%s%u", ( const char *)&off_76E313, current_funcdef_number); 
                                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dwarf2out_begin_prologue/src/dwarf2out.c:2530:52: error: use of undeclared identifier 'off_76E313'
fprintf( asm_out_file, ".%s%u:\n", ( const char *)&off_76E313, current_funcdef_number); 
                                                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dwarf2out_begin_prologue/src/dwarf2out.c:2549:1: error: use of undeclared identifier 'args_size_0'; did you mean 'args_size'?
args_size_0 = 0LL; 
^~~~~~~~~~~
args_size
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dwarf2out_begin_prologue/src/dwarf2out.c:645:13: note: 'args_size' declared here
static long args_size;
            ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dwarf2out_begin_prologue/src/obj/dwarf2out.o] Error 1
